Changelog
=========

2.0b2 - unreleased
------------------

- Set action icons via icon_expr on the actions, to avoid deprecation warnings
  in Plone 4.
  [davisagli]

2.0b1 - 2010-02-17
------------------

- Declare all package dependencies.
  [hannosch]

- Updated diff.pt to follow recent markup conventions.
  References #9981
  [spliter]

1.2.5 - 2010-01-03
------------------

* Fixed an undefined ``current_page_url`` variable in diff.pt. This closes
  http://dev.plone.org/plone/ticket/9819.
  [hannosch]

1.2.4 - 2008-12-21
------------------

* Added profiles/default/metadata.xml (version 120: lets leave plenty room in
  case any profile changes are needed on the 1.1 branch).
  [maurits]

* Avoid a test dependency on quick installer.
  [hannosch]

* Use our own PloneMessageFactory. We don't depend on CMFPlone anymore.
  [hannosch]

* Specified package dependencies.
  [hannosch]

* Made the tests independent of default content.
  [hannosch]

1.2.3 - 2008-11-14
------------------

* Fix assumption in control view: not every context object is
  IReferenceable. This fixes http://dev.plone.org/plone/ticket/8737
  [nouri]

1.2.2 - 2008-11-13
------------------

* Fix action conditions for the nth time; this time it's an
  over-ambitious "Cancel check-out" permission.  This fixes
  http://dev.plone.org/plone/ticket/8735
  [nouri]

1.2.1 - 2008-11-11
------------------

* Refine permissions fix from 1.2.0 and make tests pass again:

  Don't require Modify Portal Content (MPC) permission on the
  original to check out, which was omitted in the fix for 1.2.0.

  Don't require MPC on the original for canceling of checkout, only
  require it on the working copy.
  [nouri]

* Fix missing internationalization (#8608 thanks to Vincent Fretin)
  [encolpe]

1.2.0 - 2008-10-24
------------------

* Allow users without modify content permissions (but with the iterate
  check out permission) to check out items, and only allow them to